Cambios en la pagina del ministerio de jammpaz usando divs con rows

--- a/website/_pages/musica/ministerio_jammpaz/index.html
+++ b/website/_pages/musica/ministerio_jammpaz/index.html
@@ -2,20 +2,33 @@
 layout: page
 permalink: /musica/ministerio_jammpaz/
 ---
-<FONT FACE="roman">
-<center>
-<h3>MINISTERIO DE MÚSICA JAMMPAZ</h3>
+<div class="row">
+  <div class="col s12 center">
+    <h3>MINISTERIO DE MÚSICA JAMMPAZ</h3>
+  </div>
+</div>
 
-<br>
-<a href="/musica/ministerio_jammpaz"><img src="/assets/img/J2.jpg" alt="logoJammpaz"></a>
-<br>
+<div class="row">
+  <div class="col s12 m6 l5">
+    <a href="/musica/ministerio_jammpaz"><img src="/assets/img/J2.jpg" alt="logoJammpaz"></a>
+  </div>
 
-¿Qué significa JAMMPAZ?  
-<br>
-El acronimo Jammpaz proviene de <b>Jovenes Misioneros Mensajeros de la Paz.</b>  
-Es un ministerio netamente de la Renovación Carismatica Católica con un carisma 100% misionero.<br>
-El ministerio de Música Jammpaz es parte del Grupo de jovenes Jammpaz. 
-<br>
+  <div class="col s12 m6 l7">
+    <div class="card teal lighten-2">
+      <div class="card-content white-text">
+        <span class="card-title">
+          ¿Qué significa JAMMPAZ?
+        </span>
+        <p>
+          El acronimo Jammpaz proviene de <b>Jovenes Misioneros Mensajeros de la Paz.</b>
+          Es un ministerio netamente de la Renovación Carismatica Católica con un carisma 100% misionero.<br>
+          El ministerio de Música Jammpaz es parte del Grupo de jovenes Jammpaz.
+        </p>
+      </div>
+    </div>
+  </div>
+</div>
+
 
 <h4><b><i>LETRAS</i></b></h4><br>
 
@@ -31,19 +44,7 @@ Te Alabare "Salmo 57"<br>
 <br><br>
 
 
-
-
- 
- 
-</center>
-</FONT>
-
-
-
-
-
-
 <!-- SCM Music Player http://scmplayer.co -->
-<script type="text/javascript" src="http://scmplayer.co/script.js" 
+<script type="text/javascript" src="http://scmplayer.co/script.js"
 data-config="{'skin':'skins/scmRed/skin.css','volume':100,'autoplay':true,'shuffle':false,'repeat':1,'placement':'top','showplaylist':true,'playlist':[{'title':'Dejame escuchar\t','url':'https://youtu.be/KNlssusSA6w'},{'title':'Te alabare','url':'https://youtu.be/mI7ZXmwTDyg'},{'title':'Alebenlo','url':'https://youtu.be/OzQGQwVxFfY'},{'title':'Hossana','url':'https://youtu.be/jo7xq-Bbmug'},{'title':'Efesios 6, 13   ','url':'https://youtu.be/9sZFXWzFq04'}]}" ></script>
 <!-- SCM Music Player script end -->
