Improves aligment at programacion page

--- a/website/_pages/programacion/index.html
+++ b/website/_pages/programacion/index.html
@@ -6,16 +6,20 @@ permalink: /programacion/
 
 <h3 class="center-align red-text text-darken-2">Programación ECCEJU 2018</h3>
 
-<h5 class="amber-text text-darken-3">Primer día (Viernes 31 de Agosto de 2018)</h5>
-
 <table class="striped">
   <thead>
+    <tr>
+      <td colspan="3">
+        <h5 class="amber-text text-darken-3">Primer día (Viernes 31 de Agosto de 2018)</h5>
+      </td>
+    </tr>
     <tr>
       <th>Hora</th>
       <th>Evento</th>
       <th>Responsable</th>
     </tr>
   </thead>
+
   <tbody>
     <tr>
         <td>15:00</td>
@@ -48,12 +52,13 @@ permalink: /programacion/
         <td></td>
     </tr>
   </tbody>
-</table>
 
-<h5 class="amber-text text-darken-3">Segundo día (Sábado 1 de Septiembre de 2018)</h5>
-
-<table class="striped">
   <thead>
+    <tr>
+      <td colspan="3">
+        <h5 class="amber-text text-darken-3">Segundo día (Sábado 1 de Septiembre de 2018)</h5>
+      </td>
+    </tr>
     <tr>
       <th>Hora</th>
       <th>Evento</th>
@@ -64,7 +69,7 @@ permalink: /programacion/
     <tr>
         <td>07:30</td>
         <td>Acogida</td>
-        <td>Pastoral Juvenil Nacional y PJL Quito</td>
+        <td>Pastoral Juvenil Nacional <br/> y PJL Quito</td>
     </tr>
     <tr>
         <td>08:15</td>
@@ -74,7 +79,7 @@ permalink: /programacion/
     <tr>
         <td>08:45</td>
         <td>Saludo de bienvenida</td>
-        <td>Eddy Reinoso / Andrés Castillo</td>
+        <td>Eddy Reinoso <br/> Andrés Castillo</td>
     </tr>
     <tr>
         <td>09:00</td>
@@ -83,7 +88,7 @@ permalink: /programacion/
     </tr>
     <tr>
         <td>10:00</td>
-        <td>Momento Mariano: "Caminando con María"</td>
+        <td>Momento Mariano: <br/>"Caminando con María"</td>
         <td></td>
     </tr>
     <tr>
@@ -152,18 +157,20 @@ permalink: /programacion/
         <td></td>
     </tr>
   </tbody>
-</table>
 
-<h5 class="amber-text text-darken-3">Tercer día (Domingo 2 de Septiembre de 2018)</h5>
-
-<table class="striped">
   <thead>
+    <tr>
+      <td colspan="3">
+        <h5 class="amber-text text-darken-3">Tercer día (Domingo 2 de Septiembre de 2018)</h5>
+      </td>
+    </tr>
     <tr>
       <th>Hora</th>
       <th>Evento</th>
       <th>Responsable</th>
     </tr>
   </thead>
+
   <tbody>
     <tr>
         <td>08:00</td>
