[modificacion en ministerio jammpaz imagenes J3, J4, J5 AGREGADAS]

--- a/website/_pages/musica/ministerio_jammpaz/jammpaz_pagina_2/index.html
+++ b/website/_pages/musica/ministerio_jammpaz/jammpaz_pagina_2/index.html
@@ -3,13 +3,38 @@ layout: page
 permalink: /musica/ministerio_jammpaz/jammpaz_pagina_2/
 ---
 
+<br>
+<br>
+<div class="row">
+  <div class="col s12 m6 l7 center">
+      <div class="card teal lighten-2">
+          <div class="card-content  white-text ">
+              <p>
+              Cabe resaltar que, aunque el Ministerio ha tenido su realización musical
+              con las canciones anteriormente mencionadas, cuenta con su repertorio musical,
+              que consta de popurris de animación así como versiones autónomas de canciones como:
+              “Efesios 6:13”, “Caminemos", “Con amor eterno", “Tu amor perdura", “Aleluya”,
+              “Escrito está", “Te alabaré”, “Alábenlo”, “Hoy”, “No me soltaré", “Amor incomparable”;
+              éstas canciones conforman el repertorio actual del Ministerio.
+                  
+              </p>
+          </div>
+      </div>
+  </div>
+  
+  <div class="col s12 m6 l5">
+          <img class="materialboxed" width="350" src="/assets/img/J3.jpeg" alt="ministerioJammp">  
+  </div>
+</div>
+
+
 <div class="row">
         <div class="col s12 center">
           <h4>LETRAS</h4>
           <br><br>
           <h5>Dejame Escuchar</h5><br>
         </div>
-    </div>
+</div>
 
 
     <div class="container">
@@ -25,6 +50,8 @@ permalink: /musica/ministerio_jammpaz/jammpaz_pagina_2/
             </div>
       </div>
     </div>
+
+    <br>
 
     <div class="container">
       <div class="video-container">
@@ -49,6 +76,7 @@ permalink: /musica/ministerio_jammpaz/jammpaz_pagina_2/
 
 <div class="container center">
     <ul class="pagination">
+        <li class="waves-effect"><a href="/musica/ministerio_jammpaz/jammpaz_pagina_1/"><i class="material-icons">chevron_left</i></a></li>
         <li class="waves-effect"><a href="/musica/ministerio_jammpaz/jammpaz_pagina_1/">1</a></li>
         <li class="active"><a href="/musica/ministerio_jammpaz/jammpaz_pagina_2/">2</a></li>
         <li class="waves-effect"><a href="/musica/ministerio_jammpaz/jammpaz_pagina_3/">3</a></li>
@@ -56,3 +84,5 @@ permalink: /musica/ministerio_jammpaz/jammpaz_pagina_2/
         <li class="waves-effect"><a href="/musica/ministerio_jammpaz/jammpaz_pagina_3/"><i class="material-icons">chevron_right</i></a></li>
       </ul>
 </div>
+
+
