--- a/website/_pages/musica/ministerio_jammpaz/jammpaz_pagina_3/index.html
+++ b/website/_pages/musica/ministerio_jammpaz/jammpaz_pagina_3/index.html
@@ -3,17 +3,68 @@ layout: page
 permalink: /musica/ministerio_jammpaz/jammpaz_pagina_3/
 ---
 
+<br>
+<br>
+
+
+<div class="row">
+    <div class="col s12 m6 l5">
+      <img class="materialboxed" width="350" src="/assets/img/J4.jpeg" alt="ministerioJammpaz">  
+    </div>
+  
+    <div class="col s12 m6 l7 center">
+      <div class="card teal lighten-2">
+        <div class="card-content white-text">
+          <p>
+            Es así como el desenvolvimiento de JAMMPAZ ha permitido su participación 
+            hasta el momento, en festivales, conciertos y asambleas católicas, 
+            adquiriendo así mayor experiencia musical, técnica y espiritual. 
+            Es así que como agrupación ministerial,  se tuvo la oportunidad de servir 
+            en la jornada juvenil que se desarrolló por la venida del Santo padre a 
+            Ecuador en el mes julio del 2015.
+          </p>
+        </div>
+      </div>
+    </div>
+</div>
+
+<div class="row">
+    <div class="col s12 center">
+      <h4>LETRAS</h4>
+      <br><br>
+      <h5>Hosanna</h5><br>
+    </div>
+</div>
+
+
+
+<div class="container">
+    <div class="row">
+            <div class="col s12 m6 l5">
+              <img class="materialboxed" width="250" src="/assets/img/letraHosanna.JPG" alt="hosanna">  
+            </div><br>
+          <div class="col s12 m6 l5">    
+            <a href="https://mega.nz/#!LRoUlIDS!8aVHojZEuhhpIJql4O2FS-1Nf3PIYnfsZCdZ1NoCbsA" class="btn-large waves-effect waves-light red">Descargar Letra</a>
+            <br><br>
+            <a href="https://mega.nz/#!bNxGzKTC!VQsFMhVXv2sANn60tbmllQr7YTM1vd_xKyLvxQpkjfo" class="btn-large waves-effect waves-light red">Descargar Audio</a>
+            <br><br>
+          </div>
+    </div>
+  </div>
+
+<br>
+
+
+<div class="container">
+    <div class="video-container">
+        <iframe width="853" height="480" src="//www.youtube.com/embed/jo7xq-Bbmug" frameborder="5" allowfullscreen></iframe>
+    </div>
+  </div>
 
 
 
 
-
-
-
-
-
-
-
+  
 
 
 
