Improvements over musica page section

--- a/website/_pages/musica/index.html
+++ b/website/_pages/musica/index.html
@@ -4,41 +4,28 @@ title: Música
 permalink: /musica/
 ---
 
-<div class="row">
-  <div class="col s12 center">
-    <h2>MINISTERIOS DE MÚSICA</h2>
-  </div>
-</div>
-
-
+<h2 class="center">MINISTERIOS DE MÚSICA</h2>
+<h3 class="center">Ministerio Jammpaz</h3>
 
 <div class="row">
-  <div class="col s12 center">
-    <h3>Ministerio Jammpaz</h3>
-  </div>
-</div>
-
-<div class="container">
-    <div class="row">
-        <div class="col s12 m7 center">
-        <div class="card">
-            <div class="card-image">
-            <img class="materialboxed" src="/assets/img/J2.jpg" alt="misniteriojammpaz">
-            <span class="card-title">
-            </span>
-            </div>
-            <div class="card-content">
-            <p>¿Qué significa JAMMPAZ?<br>
-            El acronimo Jammpaz proviene de:<br>
-            Jovenes Misioneros Mensajeros de la Paz.</p>
-            </div>
-            <div class="card-action">
-            <a href="/musica/ministerio_jammpaz/jammpaz_pagina_1">VER MAS... --></a>
-            </div>
+    <div class="col s12 m7 center">
+    <div class="card">
+        <div class="card-image">
+        <img class="materialboxed" src="/assets/img/J2.jpg" alt="misniteriojammpaz">
+        <span class="card-title">
+        </span>
         </div>
+        <div class="card-content">
+        <p>¿Qué significa JAMMPAZ?<br>
+        El acronimo Jammpaz proviene de:<br>
+        Jovenes Misioneros Mensajeros de la Paz.</p>
+        </div>
+        <div class="card-action">
+        <a href="/musica/ministerio_jammpaz/jammpaz_pagina_1">VER MAS... --></a>
         </div>
     </div>
-</div>            
+    </div>
+</div>
 
  
 
