Adds some tweaks over musica page

--- a/website/_pages/musica/ministerio_jammpaz/jammpaz_pagina_2/index.html
+++ b/website/_pages/musica/ministerio_jammpaz/jammpaz_pagina_2/index.html
@@ -16,14 +16,14 @@ permalink: /musica/ministerio_jammpaz/jammpaz_pagina_2/
               “Efesios 6:13”, “Caminemos", “Con amor eterno", “Tu amor perdura", “Aleluya”,
               “Escrito está", “Te alabaré”, “Alábenlo”, “Hoy”, “No me soltaré", “Amor incomparable”;
               éstas canciones conforman el repertorio actual del Ministerio.
-                  
+
               </p>
           </div>
       </div>
   </div>
-  
+
   <div class="col s12 m6 l5">
-          <img class="materialboxed" width="350" src="/assets/img/J3.jpeg" alt="ministerioJammp">  
+          <img class="materialboxed" width="350" src="/assets/img/jammpaz_3.jpeg" alt="ministerioJammp">
   </div>
 </div>
 
@@ -40,7 +40,7 @@ permalink: /musica/ministerio_jammpaz/jammpaz_pagina_2/
     <div class="container">
       <div class="row">
               <div class="col s12 m6 l5">
-                <img class="materialboxed" width="250" src="/assets/img/letraDejame.JPG" alt="dejameletra">
+                <img class="materialboxed" width="250" src="/assets/img/jammpaz_letra_dejame.jpg" alt="dejameletra">
               </div><br>
             <div class="col s12 m6 l5">
 
