--- a/website/_pages/musica/index.html
+++ b/website/_pages/musica/index.html
@@ -4,86 +4,56 @@ title: Música
 permalink: /musica/
 ---
 
-<h2 class="center">MINISTERIOS DE MÚSICA</h2>
-<h3 class="center">Ministerio Jammpaz</h3>
+<h1 class="red-text">Ministerios de Música</h1>
+
+<p>A continuación les presentamos a los ministerios de música que animarán durante el encuentro:</p>
 
 <div class="row">
-    <div class="col s12 m7 center">
+  <div class="col s12 m6 l4">
     <div class="card">
-        <div class="card-image">
-        <img class="materialboxed" src="/assets/img/J2.jpg" alt="misniteriojammpaz">
-        <span class="card-title">
-        </span>
-        </div>
+      <div class="card-image">
+        <img class="materialboxed" src="/assets/img/jammpaz_2.jpg" alt="ministerio_jammpaz">
+      </div>
+      <div class="card-content">
+        <p><b>¿Qué significa JAMMPAZ?</b> El acrónimo Jammpaz proviene de: <b>Jóvenes Adoradores Misioneros Mensajeros de la Paz.</b></p>
+      </div>
+      <div class="card-action">
+        <a href="/musica/ministerio_jammpaz/jammpaz_pagina_1">VER MÁS</a>
+      </div>
+    </div>
+  </div>
+
+  <div class="col s12 m6 l4">
+    <div class="card horizontal">
+      <div class="card-image">
+        <img class="materialboxed" img src="/assets/img/fcj_logo.jpg" alt="familiasconjesus">
+      </div>
+      <div class="card-stacked">
         <div class="card-content">
-        <p>¿Qué significa JAMMPAZ?<br>
-        El acronimo Jammpaz proviene de:<br>
-        Jovenes Misioneros Mensajeros de la Paz.</p>
+          <p><b>¿Qué significa FCJ?</b> El acrónimo FCJ significa: <b>Familias Con Jesús.</b></p>
         </div>
         <div class="card-action">
-        <a href="/musica/ministerio_jammpaz/jammpaz_pagina_1">VER MAS... --></a>
+          <a href="/musica/ministerio_fcj/">VER MÁS</a>
         </div>
+      </div>
     </div>
-    </div>
-</div>
-
- 
-
-
- <div class="row">
-  <div class="col s12 center">
-    <h3>Ministerio de Sangolqui</h3>
   </div>
-</div>
 
-<div class="container">
-    <div class="row"> 
-    <div class="col s12 m7 center">
-        <div class="card horizontal">
-        <div class="card-image">
-            <img class="materialboxed" img src="/assets/img/ministerio fausto.JPG" alt="ministeriosangolqui">
+  <div class="col s12 m8 l4">
+    <div class="card horizontal">
+      <div class="card-image">
+        <img class="materialboxed" src="/assets/img/rccs_logo.jpg" alt="ministerio_sangolqui">
+      </div>
+      <div class="card-stacked">
+        <div class="card-content">
+          <p>
+          El Ministerio de Alabanza de la <b>Renovación Carismática Católica de Sangolquí</b> se formó hace tres años.
+          </p>
         </div>
-        <div class="card-stacked">
-            <div class="card-content">
-            <p>
-            El Ministerio de Alabanza de la Renovación Carismática Católica de Sangolquí se formó hace tres años.
-            </p>
-            </div>
-            <div class="card-action">
-            <a href="/musica/ministerio_sangolqui">VER MAS... --></a>
-            </div>
+        <div class="card-action">
+          <a href="/musica/ministerio_sangolqui">VER MÁS</a>
         </div>
-        </div>
+      </div>
     </div>
-    </div>
-</div>
-
-
-
-<div class="row">
-  <div class="col s12 center">
-    <h3>Ministerio FCJ</h3>
   </div>
-</div>
-
-<div class="container">
-    <div class="row"> 
-    <div class="col s12 m7 center">
-        <div class="card horizontal">
-        <div class="card-image">
-            <img class="materialboxed" img src="/assets/img/FCJ.jpg" alt="familiasconjesus">
-        </div>
-        <div class="card-stacked">
-            <div class="card-content">
-            <p>¿Qué significa FCJ?<br>
-            El acronimo FCJ proviene de:<br>
-            FAMILIAS CON JESÚS.</p>
-            </div>
-            <div class="card-action">
-            <a href="/musica/ministerio_fcj">VER MAS... --></a>
-            </div>
-        </div>
-        </div>
-    </div>
-    </div>
 </div>
