--- a/website/_pages/musica/ministerio_jammpaz/jammpaz_pagina_3/index.html
+++ b/website/_pages/musica/ministerio_jammpaz/jammpaz_pagina_3/index.html
@@ -9,18 +9,18 @@ permalink: /musica/ministerio_jammpaz/jammpaz_pagina_3/
 
 <div class="row">
     <div class="col s12 m6 l5">
-      <img class="materialboxed" width="350" src="/assets/img/J4.jpeg" alt="ministerioJammpaz">  
+      <img class="materialboxed" width="350" src="/assets/img/jammpaz_4.jpeg" alt="ministerioJammpaz">
     </div>
-  
+
     <div class="col s12 m6 l7 center">
       <div class="card teal lighten-2">
         <div class="card-content white-text">
           <p>
-            Es así como el desenvolvimiento de JAMMPAZ ha permitido su participación 
-            hasta el momento, en festivales, conciertos y asambleas católicas, 
-            adquiriendo así mayor experiencia musical, técnica y espiritual. 
-            Es así que como agrupación ministerial,  se tuvo la oportunidad de servir 
-            en la jornada juvenil que se desarrolló por la venida del Santo padre a 
+            Es así como el desenvolvimiento de JAMMPAZ ha permitido su participación
+            hasta el momento, en festivales, conciertos y asambleas católicas,
+            adquiriendo así mayor experiencia musical, técnica y espiritual.
+            Es así que como agrupación ministerial,  se tuvo la oportunidad de servir
+            en la jornada juvenil que se desarrolló por la venida del Santo padre a
             Ecuador en el mes julio del 2015.
           </p>
         </div>
@@ -41,9 +41,9 @@ permalink: /musica/ministerio_jammpaz/jammpaz_pagina_3/
 <div class="container">
     <div class="row">
             <div class="col s12 m6 l5">
-              <img class="materialboxed" width="250" src="/assets/img/letraHosanna.JPG" alt="hosanna">  
+              <img class="materialboxed" width="250" src="/assets/img/jammpaz_letra_hosanna.jpg" alt="letra_hosanna">
             </div><br>
-          <div class="col s12 m6 l5">    
+          <div class="col s12 m6 l5">
             <a href="https://mega.nz/#!LRoUlIDS!8aVHojZEuhhpIJql4O2FS-1Nf3PIYnfsZCdZ1NoCbsA" class="btn-large waves-effect waves-light red">Descargar Letra</a>
             <br><br>
             <a href="https://mega.nz/#!bNxGzKTC!VQsFMhVXv2sANn60tbmllQr7YTM1vd_xKyLvxQpkjfo" class="btn-large waves-effect waves-light red">Descargar Audio</a>
@@ -64,7 +64,7 @@ permalink: /musica/ministerio_jammpaz/jammpaz_pagina_3/
 
 
 
-  
+
 
 
 
