Refactoring over RCCS page

--- a/website/_pages/musica/index.html
+++ b/website/_pages/musica/index.html
@@ -9,7 +9,7 @@ permalink: /musica/
 <p>A continuación les presentamos a los ministerios de música que animarán durante el encuentro:</p>
 
 <div class="row">
-  <div class="col s12 m6 l4">
+  <div class="col s12 m6 l4 offset-l2">
     <div class="card">
       <div class="card-image">
         <img class="materialboxed" src="/assets/img/jammpaz_2.jpg" alt="ministerio_jammpaz">
@@ -24,22 +24,6 @@ permalink: /musica/
   </div>
 
   <div class="col s12 m6 l4">
-    <div class="card horizontal">
-      <div class="card-image">
-        <img class="materialboxed" img src="/assets/img/fcj_logo.jpg" alt="familiasconjesus">
-      </div>
-      <div class="card-stacked">
-        <div class="card-content">
-          <p><b>¿Qué significa FCJ?</b> El acrónimo FCJ significa: <b>Familias Con Jesús.</b></p>
-        </div>
-        <div class="card-action">
-          <a href="/musica/ministerio_fcj/">VER MÁS</a>
-        </div>
-      </div>
-    </div>
-  </div>
-
-  <div class="col s12 m8 l4">
     <div class="card horizontal">
       <div class="card-image">
         <img class="materialboxed" src="/assets/img/rccs_logo.jpg" alt="ministerio_sangolqui">
