--- a/website/_pages/musica/ministerio_sangolqui/index.html
+++ b/website/_pages/musica/ministerio_sangolqui/index.html
@@ -3,70 +3,44 @@ layout: page
 permalink: /musica/ministerio_sangolqui/
 ---
 
+<h3 class="red-text center">Ministerio de Música de la Renovación Carismática Católica de Sangolquí</h3>
 
 <div class="row">
-    <div class="col s12 center">
-      <h3>Ministerio de Sangolqui</h3>
-    </div>
+  <div class="col s12 m6 l4 offset-l2">
+    <img class="materialboxed responsive-img" src="/assets/img/rccs_1.jpg" alt="ministerio_rccs">
+  </div>
+
+  <div class="col s12 m6 l4">
+    <p>
+    El Ministerio de Alabanza de la Renovación Carismática Católica de Sangolquí
+    se formó hace tres años. Está conformado por dos familias y un hermano catequista:
+    la familia Drouet Navarrete (miembro del grupo de oración
+    “Buscando la Verdad de Dios”), la familia Castañeda Villarreal
+    (miembro del grupo “Buscando la Verdad de Dios”)
+    y el hermano Juan Crisanto (Catequista de la Parroquia San Juan Bautista de Sangolquí).
+    </p>
+  </div>
+
+  <div class="col s12 m6 l4">
+    <p>
+    Los nombres de las y los integrantes del ministerio con sus respectivos roles son:
+    Rosita Villarreal (voces), Fausto Castañeda Sánchez (guitarra clásica de acompañamiento),
+    María Cristina Castañeda (voces), Edison Castañeda (guitarra clásica de acompañamiento
+    y voces), Arianna Drouet (voces), André Drouet (batería y percusión),
+    David Drouet (guitarra eléctrica), Juan Crisanto (teclados) y Fausto Castañeda Villarreal (bajo).
+    </p>
+  </div>
 </div>
 
 <div class="row">
-    <div class="col s12 m6 l5">
-      <img class="materialboxed" width="350" src="/assets/img/rccs_1.jpg" alt="ministerio_rccs">
-    </div>
+  <div class="col s12 m6 l4 offset-l2">
+    <p>
+    Los géneros musicales que suele interpretar el ministerio son variados:
+    baladas, ska, rancheras, polka, pasillos, rock, pop, cumbia, merengue.
+    </p>
+  </div>
 
-    <div class="col s12 m6 l7 center">
-      <div class="card teal lighten-2">
-        <div class="card-content white-text">
-          <p>
-            El Ministerio de Alabanza de la Renovación Carismática Católica de Sangolquí
-            se formó hace tres años. Está conformado por dos familias y un hermano catequista:
-            la familia Drouet Navarrete (miembro del grupo de oración
-            “Buscando la Verdad de Dios”), la familia Castañeda Villarreal
-            (miembro del grupo “Buscando la Verdad de Dios”)
-            y el hermano Juan Crisanto (Catequista de la Parroquia San Juan Bautista de Sangolquí).
-          </p>
-        </div>
-      </div>
-    </div>
-</div>
-<br>
-
-<div class="row">
-    <div class="col s12 m6 l7 center">
-        <div class="card teal lighten-2">
-            <div class="card-content white-text">
-                <p>
-                Los nombres de las y los integrantes del ministerio con sus respectivos roles son:
-                Rosita Villarreal (voces), Fausto Castañeda Sánchez (guitarra clásica de acompañamiento),
-                María Cristina Castañeda (voces), Edison Castañeda (guitarra clásica de acompañamiento
-                y voces), Arianna Drouet (voces), André Drouet (batería y percusión),
-                David Drouet (guitarra eléctrica), Juan Crisanto (teclados) y Fausto Castañeda Villarreal (bajo).
-
-                </p>
-            </div>
-        </div>
-    </div>
-
-    <div class="col s12 m6 l5">
-            <img class="materialboxed" width="350" src="/assets/img/rccs_2.jpg" alt="ministerio_sangolqui">
-    </div>
-</div>
-
-
-
-<div class="center">
-    <div class="col s12 m6 l7 center">
-        <div class="card teal lighten-2">
-            <div class="card-content white-text">
-                    <span class="card-title black-text">
-                            Generos musicales
-                    </span>
-                <p>
-                    Los géneros musicales que suele interpretar el ministerio son variados:<br>
-                    baladas, ska, rancheras, polka, pasillos, rock, pop, cumbia, merengue.<br>
-                </p>
-            </div>
-        </div>
-    </div>
+  <div class="col s12 m6 l4">
+    <img class="materialboxed responsive-img" src="/assets/img/rccs_2.jpg" alt="ministerio_sangolqui" />
+  </div>
 </div>
