Refactoring over jammpaz page

--- a/website/_pages/musica/index.html
+++ b/website/_pages/musica/index.html
@@ -18,7 +18,7 @@ permalink: /musica/
         <p><b>¿Qué significa JAMMPAZ?</b> El acrónimo Jammpaz proviene de: <b>Jóvenes Adoradores Misioneros Mensajeros de la Paz.</b></p>
       </div>
       <div class="card-action">
-        <a href="/musica/ministerio_jammpaz/jammpaz_pagina_1">VER MÁS</a>
+        <a href="/musica/ministerio_jammpaz/pagina_1.html">VER MÁS</a>
       </div>
     </div>
   </div>
